corrected color for links

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -19,9 +19,11 @@
 
 .link {
     color: black;
+    text-decoration: none;
 }
 
 .link--active {
-    color: blue;
+    color: rgb(186, 105, 200);
     font-weight: bold;
+    text-decoration: none;
 }
