--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -20,10 +20,26 @@
 .link {
     color: black;
     text-decoration: none;
+    text-align:center;
+    vertical-align: middle;
 }
 
 .link--active {
     color: rgb(186, 105, 200);
     font-weight: bold;
     text-decoration: none;
+    text-align:center;
+    vertical-align: middle;
+}
+
+.nav__link {
+    flex:1rem;
+    height:auto;
+    padding: 1rem;
+    text-align:center;
+    vertical-align: middle;
+}
+
+body {
+    padding: 5%;
 }
