--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,8 +1,6 @@
 .header {
     display: flex;
-    padding: 1rem;
-    background: #ffffff;
-    justify-content: flex-start;
+    justify-content:space-evenly;
     border-top: solid;
     border-bottom: solid;
     border-left: solid;
@@ -10,40 +8,38 @@
 }
 .header__title {
     display: block;
-    padding: 1rem;
-    background: #ffffff;
-
+    font-weight: bold;
 }
 .header__links {
-    display: flex;
+
     flex-direction:row;
     list-style: none;
-    justify-content: space-evenly;
+    padding: 1vh;
 }
 
 .link {
     color: black;
     text-decoration: none;
-    text-align:center;
     vertical-align: middle;
+    position: relative;
+    top: 40%;
 }
 
 .link--active {
     color: rgb(186, 105, 200);
     font-weight: bold;
     text-decoration: none;
-    text-align:center;
     vertical-align: middle;
+    position: relative;
+    top: 40%;
 }
 
 .nav__link {
     flex:1rem;
     height:auto;
     padding: 1rem;
-    text-align:center;
-    vertical-align: middle;
+    text-align: center;
+    width: 100%;
+    position: relative;
 }
 
-body {
-    padding: 5%;
-}
